--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -101,11 +101,13 @@ footer small {
 }
 
 footer ul {
+  width: 100%;
   float: right;
   list-style: none;
+  padding-right: 10%;
 }
 
 footer ul li {
-  float: left;
+  float: right;
   margin-left: 15px;
 }
