--- a/app/components/Modal/Modal.module.scss
+++ b/app/components/Modal/Modal.module.scss
@@ -58,7 +58,7 @@
       font-size: 30px;
       position: absolute;
       top: 10px;
-      left: 10px;
+      right: 30px;
       opacity: 1.0;
       &:hover{
         opacity: 0.4;
