--- a/app/styles/Home.module.scss
+++ b/app/styles/Home.module.scss
@@ -1,3 +1,12 @@
 .header {
   background-color: black;
 }
+
+.logo {
+  font-size: 20px;
+  color: red;
+}
+
+.black {
+  background-color: black;
+}
