--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -67,7 +67,7 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #fff;
+  color: red;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
@@ -75,7 +75,7 @@ p {
 }
 
 #logo:hover {
-  color: #fff;
+  opacity: 0.6;
   text-decoration: none;
 }
 
